<resources>
    <string name="app_name">MACA</string>
    <string name="skip">SKIP</string>
    <string name="next">next</string>
    <string name="sign_in">Sign In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">username</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="login">Login</string>
    <string name="profile">profile</string>
    <string name="contact">contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books">Books</string>
</resources>
