<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Sign.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/register_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/register" />

            <LinearLayout
                android:id="@+id/relativeLayout"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_white"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/button_register">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorPrimaryDark" />

            </LinearLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sudah_punya_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginEnd="85dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sudah_punya_akun"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="40dp"/>

                <TextView
                    android:id="@+id/login_text_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="200dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="40dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>